movie-project/src/app/globals.css
/* @tailwind base;
@tailwind components;
@tailwind utilities; */

:root {
  /* ADMIN */
  --bg-navbar-admin: #03033f;

  /* USER */
  --text-main: #1c1c1c;
  --anti-text-main: #f1f1f1;
  --text-black: #111111;
  --text-gray: #3b3b3b;
  --text-btn: var(--bg-section);
  --bg-navbar: #ffffff;
  --bg-main-second: #20242c;

  --bg-section: linear-gradient(0deg, #2c8cc2, #0bc4e2);
  --bg-section-hover: #2c8cc2;

  --bg-header: #ef233c;
  --bg-main: #ffffff;
  --bg-footer: #111111;
  --bg-white: #ffffff;
  --bg-gray: #696969;
  --bg-tag: #3182ce;
  --bg-transparent: #00000000;
  --bg-avatar: #20242c98;

  /* Movie */
  --gradient-movie: linear-gradient(#11111100, #111111c1);
  --bg-title: #0000002c;
  --bg-episode-watched: #dfdfdf;
  --episode-hover: #c3c3c390;

  /* Banner */
  --banner-description: #2b2d427e;

  /* Auth */
  --bg-auth-from: #ffffff;
}

body {
  background-color: var(--bg-main) !important;
  scroll-behavior: smooth;
  height: 100vh;
}

html {
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  line-height: normal !important;
}

::-webkit-scrollbar-track {
  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
  background-color: #f5f5f5;
}

::-webkit-scrollbar {
  width: 6px;
  background-color: #f5f5f5;
}

::-webkit-scrollbar-thumb {
  background-color: var(--bg-navbar);
}

.show-text {
  animation-duration: 2500ms;
  animation-delay: 0ms;
  animation-name: showText;
  animation-iteration-count: 1;
}

@keyframes showText {
  0% {
    clip-path: polygon(0% 0%, 0% 0%, 0% 0%);
  }
  100% {
    clip-path: polygon(0% 0%, 200% 0%, 0% 200%);
  }
}

.navigate {
  display: flex;
  gap: 0.5rem;
  justify-content: left;
  align-items: center;
  flex-wrap: wrap;
  list-style: none;
  .disabled {
    color: gray;
  }
  .page-paginate {
    transition: 0.3s;
    font-weight: bold;
    &:hover {
      color: #d21616;
    }
  }
  a {
    justify-content: center;
    align-items: center;
    display: flex;
    color: var(--text-black);
    width: 35px;
    height: 35px;
    font-size: 16px;
  }
  .hd {
    justify-content: center;
    align-items: center;
    display: flex;
  }
  .active {
    border-radius: 5px;
    color: var(--anti-text-main) !important;
    background-color: var(--bg-main-second);
    &:hover {
      color: initial;
    }
  }
  .break {
    a {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

button {
  line-height: unset !important;
}

